<resources>
    <string name="app_name">Rock Mobile</string>
    <string name="action_settings">Settings</string>
    <string name="cancel">Cancel</string>
    <string name="server_error">Unknown server error.</string>
    <string name="can_not_be_empty">can\'t be empty value</string>
    <string name="groups">GROUPS</string>
    <string name="feed">FEED</string>
    <string name="messages">MESSAGES</string>
    <string name="series">MESSAGES</string>
    <string name="livestream">LIVESTREAM</string>
    <string name="stories">STORIES</string>
    <string name="campuses">CAMPUSES</string>
    <string name="give">GIVE</string>
    <string name="give_now">Give Now</string>
    <string name="no_requests">NO REQUESTS YET</string>
    <string name="all_group_updates">All group updates and\napp notifications will\nbe displayed here</string>
    <string name="your_feed_empty">YOUR FEED IS EMPTY</string>
    <string name="start_exploring">Start exploring the app\nright now!</string>
    <string name="tutorial_go">Go!</string>
    <string name="tutorial_skip">Skip Tutorial</string>
    <string name="signup">Sign Up</string>
    <string name="signin">Sign In</string>
    <string name="signin_with_juice">Sign In with Juice ID</string>
    <string name="guest">Guest</string>
    <string name="signing_up">Signing up...</string>
	<string name="user_already_exists">Username already exists.</string>
	<string name="signup_completed_successfully">Signup completed successfully</string>
	<string name="this_app_uses">This app uses JuiceID, which is a secure and free\n
	    authentication system developed for the Church.</string>
	<string name="if_you_have">If you have an existing login with JuiceID you\n
	    can sign in using that now.</string>
    <string name="logging_in">Logging in...</string>
    <string name="confirm_your_email">Please confirm your email to reset password.</string>
    <string name="no_found_email">No user found with email</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="wrong_username_or_password">Wrong email or password</string>
    <string name="new_group">NEW GROUP</string>
    <string name="name">NAME</string>
    <string name="kind">KIND</string>
    <string name="about">ABOUT</string>
    <string name="access">ACCESS</string>
    <string name="private_group">Private Group</string>
    <string name="no_group_photo">No Group Photo</string>
    <string name="take_picture_from">Take a picture or choose from camera roll</string>
    <string name="import_photo">Import Photo</string>
    <string name="take_picture">Take a picture</string>
    <string name="camera_roll">Camera roll</string>
    <string name="move_and_pinch">Move and pinch to crop photo</string>
    <string name="new_group_saved">New group saved successfully!</string>
    <string name="group_changed">Group changed</string>
    <string name="you_must_enter_description">You must enter a description of this group in order to create it.</string>
    <string name="featured">FEATURED</string>
    <string name="categories">CATEGORIES</string>
    <string name="no_member_of_any_group">YOU\'RE NOT A MEMBER\nOF ANY GROUP YET.</string>
    <string name="search_and_find_group">Search and find a group now.</string>
    <string name="group_leave_success">You left group.</string>
    <string name="group_request_pending">Group join request is pending.</string>
    <string name="group_request_canceled">Group join request was canceled.</string>
    <string name="are_you_sure_delete_user">Are you sure you want to delete user?"</string>
    <string name="are_you_sure_leave">Are you sure you want to leave this group?</string>
    <string name="are_you_sure_clear_chat_history">Are you sure you want to clear the group\'s chat history?</string>
    <string name="comfirm">Confirm</string>
    <string name="done">Done</string>
    <string name="group">GROUP</string>
    <string name="group_admins">Group admins:</string>
    <string name="add_new_event">Add New Event</string>
    <string name="new_event">NEW EVENT</string>
    <string name="time">TIME</string>
    <string name="date">Date</string>
    <string name="place">PLACE</string>
    <string name="new_event_saved">New event saved successfully!</string>
    <string name="event_changed">Event changed successfully!</string>
    <string name="new_event_is_pending">Adding event request is pending.</string>
    <string name="change_event_is_pending">Changing event request is pending.</string>
    <string name="notify_event_dialog_title">Choose notification time</string>
    <string name="notify_10min_before">10 minutes before</string>
    <string name="notify_30min_before">30 minutes before</string>
    <string name="notify_1hour_before">1 hour before</string>
    <string name="notify_1day_before">1 day before</string>
    <string name="notify_event_message">event will be occured.</string>
    <string name="notify_event_reminder_saved">Event reminder saved successfully.</string>
    <string name="new_thread">NEW THREAD</string>
    <string name="add_new_thread">Add New Thread</string>
    <string name="type_your_message">Type your message here...</string>
    <string name="new_thread_saved">New thread saved successfully!</string>
    <string name="thread_changed">Thread changed successfully!</string>
    <string name="created_new_thread">created a new thread called</string>
    <string name="users">USERS</string>
    <string name="settings">SETTINGS</string>
    <string name="manage_members">Manage Members</string>
    <string name="invite_users">Invite Users</string>
    <string name="edit_group">Edit Group</string>
    <string name="delete_group">Delete Group</string>
    <string name="deleted_successfully">You have been removed from this group successfully.</string>
    <string name="clear_chat_history">Clear Chat History</string>
    <string name="make_admin">Make Admin</string>
    <string name="remove_admin">Remove Admin</string>
    <string name="remove_user">Remove User</string>
    <string name="can_not_remove_admin">You can\'t remove admin user for this group.</string>
    <string name="copyright">Copyright © %s. San Diego Rock Church.</string>
    <string name="profile">PROFILE</string>
    <string name="privacy_policy">PRIVACY POLICY</string>
    <string name="notifications">NOTIFICATIONS</string>
    <string name="group_notifications">GROUP NOTIFICATIONS</string>
    <string name="user_information_saved">User information saved successfully</string>
</resources>