<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/splash" />

    <Button
        android:id="@+id/button_skip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="40dp"
        android:background="@color/transparent"
        android:text="@string/guest"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/button_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button_skip"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:background="@drawable/btn_signin_selector"
        android:text="@string/signin"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/button_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button_login"
        android:layout_alignLeft="@+id/button_login"
        android:layout_alignRight="@+id/button_login"
        android:layout_marginBottom="10dp"
        android:background="@drawable/btn_signup_selector"
        android:text="@string/signup"
        android:textColor="@color/white" />

</RelativeLayout>
