<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_bg"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/topbar_height"
        android:background="@color/white" >

        <ImageButton
            android:id="@+id/imageButton_back"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:background="@color/transparent"
            android:src="@drawable/btn_back_active" />

        <View
            android:id="@+id/view1"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_alignParentBottom="true"
            android:background="@color/section_divider" />

        <TextView
            android:id="@+id/TextView05"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/imageButton_back"
            android:text="@string/settings"
            android:textSize="@dimen/font_topbar_title"
            android:textStyle="bold" />

    </RelativeLayout>

    <TextView
        android:id="@+id/TextView03"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginTop="20dp"
        android:text="@string/users" />

    <RelativeLayout
        android:id="@+id/layout_manage_members"
        android:layout_width="match_parent"
        android:layout_height="@dimen/section_height"
        android:layout_marginTop="10dp"
        android:background="@drawable/section_bg" >

        <TextView
            android:id="@+id/TextView02"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:text="@string/manage_members"
            android:textSize="16sp" />

        <ImageView
            android:id="@+id/ImageView03"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:src="@drawable/icon_navigation_next" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/layout_invite_users"
        android:layout_width="match_parent"
        android:layout_height="@dimen/section_height"
        android:layout_marginTop="-1dp"
        android:background="@drawable/section_bg" >

        <TextView
            android:id="@+id/TextView04"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:text="@string/invite_users"
            android:textSize="16sp" />

        <ImageView
            android:id="@+id/ImageView02"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:src="@drawable/icon_navigation_next" />
    </RelativeLayout>

    <TextView
        android:id="@+id/textView_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginTop="20dp"
        android:text="@string/group" />

    <RelativeLayout
        android:id="@+id/layout_edit_group"
        android:layout_width="match_parent"
        android:layout_height="@dimen/section_height"
        android:layout_marginTop="10dp"
        android:background="@drawable/section_bg" >

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:text="@string/edit_group"
            android:textSize="16sp" />

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:src="@drawable/icon_navigation_next" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/layout_delete_group"
        android:layout_width="match_parent"
        android:layout_height="@dimen/section_height"
        android:layout_marginTop="-1dp"
        android:background="@drawable/section_bg"
        android:visibility="gone" >

        <TextView
            android:id="@+id/TextView06"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:text="@string/delete_group"
            android:textSize="16sp" />

        <ImageView
            android:id="@+id/ImageView04"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:src="@drawable/icon_navigation_next" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/layout_clear_chat_history"
        android:layout_width="match_parent"
        android:layout_height="@dimen/section_height"
        android:layout_marginTop="-1dp"
        android:background="@drawable/section_bg" >

        <TextView
            android:id="@+id/TextView01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:text="@string/clear_chat_history"
            android:textSize="16sp" />

        <ImageView
            android:id="@+id/ImageView01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:src="@drawable/icon_navigation_next" />
    </RelativeLayout>

</LinearLayout>