<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_bg"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/topbar_height"
        android:background="@color/white" >

        <ImageButton
            android:id="@+id/imageButton_close"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:background="@color/transparent"
            android:src="@drawable/btn_close_selector" />

        <ImageButton
            android:id="@+id/imageButton_apply"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@color/transparent"
            android:src="@drawable/btn_apply_selector" />

        <View
            android:id="@+id/view1"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_alignParentBottom="true"
            android:background="@color/section_divider" />

        <TextView
            android:id="@+id/textView_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/imageButton_close"
            android:text="@string/new_group"
            android:textSize="@dimen/font_topbar_title"
            android:textStyle="bold" />
    </RelativeLayout>

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/main_bg" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <RelativeLayout
                    android:id="@+id/layout_add_photo"
                    android:layout_width="match_parent"
                    android:layout_height="150dp" >

                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="34dp"
                        android:text="@string/no_group_photo"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/textView6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/textView5"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="5dp"
                        android:text="@string/take_picture_from" />

                    <ImageButton
                        android:id="@+id/imageButton_importPhoto"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/textView6"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="20dp"
                        android:background="@color/transparent"
                        android:src="@drawable/btn_import_photo" />

                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/layout_edit_photo"
                    android:layout_width="match_parent"
                    android:layout_height="200dp" >

                    <ImageView
                        android:id="@+id/imageView_blurPicture"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />

                    <ImageView
                        android:id="@+id/imageView_groupPicture"
                        android:layout_width="200dp"
                        android:layout_height="160dp"
                        android:layout_centerHorizontal="true"
                        android:layout_centerVertical="false"
                        android:layout_marginTop="15dp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/btn_close_normal" />

                    <ImageButton
                        android:id="@+id/imageButton_trash"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_alignParentLeft="true"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="15dp"
                        android:background="@color/transparent"
                        android:src="@drawable/btn_trash_selector" />

                    <ImageButton
                        android:id="@+id/imageButton_edit"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="15dp"
                        android:background="@color/transparent"
                        android:src="@drawable/btn_edit_active" />

                </RelativeLayout>

            </RelativeLayout>

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginTop="20dp"
                android:text="@string/name" />

            <EditText
                android:id="@+id/editText_name"
                android:layout_width="match_parent"
                android:layout_height="@dimen/section_height"
                android:layout_marginTop="5dp"
                android:background="@drawable/section_bg"
                android:ems="10"
                android:maxLength="50"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:singleLine="true"
                android:textSize="@dimen/font_medium" />

            <TextView
                android:id="@+id/TextView01"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginTop="15dp"
                android:text="@string/kind"
                android:visibility="gone"/>

            <RelativeLayout
                android:id="@+id/layout_category"
                android:layout_width="match_parent"
                android:layout_height="@dimen/section_height"
                android:layout_marginTop="5dp"
                android:background="@drawable/section_bg"
                android:paddingBottom="1dp"
                android:paddingTop="1dp"
                android:visibility="gone">

                <Spinner
                    android:id="@+id/spinner_category"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:layout_toLeftOf="@+id/imageButton_categoryDetail"
                    android:background="@color/white"
                    android:paddingLeft="@dimen/activity_horizontal_margin" />

                <ImageButton
                    android:id="@+id/imageButton_categoryDetail"
                    android:layout_width="50dp"
                    android:layout_height="match_parent"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:background="@color/transparent"
                    android:src="@drawable/icon_navigation_next" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin" >

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/about" />
            </RelativeLayout>

            <EditText
                android:id="@+id/editText_about"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/section_bg"
                android:ems="10"
                android:gravity="left|top"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="5dp"
                android:textSize="@dimen/font_medium" />

            <TextView
                android:id="@+id/TextView02"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginTop="15dp"
                android:text="@string/access" />

            <RelativeLayout
                android:id="@+id/RelativeLayout01"
                android:layout_width="match_parent"
                android:layout_height="@dimen/section_height"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/section_bg"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin" >

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:text="@string/private_group" />

                <Switch
                    android:id="@+id/switch_group_permission"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true" />

            </RelativeLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>
